# quiz-studio

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package-lock.json.internal-bak  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo
docs/: DECISIONS.md  FIX_REPORT.md  GLM_OCR_COMPATIBILITY.md  GLM_OCR_SERVICE.md  TECHNICAL_DESIGN.md  THIRD_PARTY_RUNTIME.md  V0.2_AI_EXPLANATION.md  VALIDATION.md
docs/adr/: 0001-feature-sliced-boundaries.md  0002-embed-llama-cpp-runtime-download-glm-ocr-model.md
docs/plans/: 2026-06-18-ai-subjective-grading-design.md  2026-06-18-in-session-question-navigation-design.md  2026-06-18-paper-composer-persistence-design.md  2026-06-18-paper-composer-persistence.md  2026-06-18-v1-gap-closure-design.md  2026-06-18-v1-gap-closure.md  2026-06-19-glm-ocr-runtime-implementation.md  2026-06-19-glm-ocr-sidecar-design.md
docs/superpowers/plans/: 2026-06-18-ai-subjective-grading.md  2026-06-18-automatic-ai-grading.md  2026-06-18-content-addressed-assets.md
docs/superpowers/specs/: 2026-06-18-automatic-ai-grading-design.md  2026-06-18-content-addressed-asset-store-design.md
samples/: question-bank.json  quiz-chinese-punct.txt  quiz-markdown.md  quiz-standard.txt
scripts/: create_import_fixtures.py  fetch-llama-runtime.mjs  llama-runtime-checksums.txt  llamaRuntime.test.ts  make-icon-source.cjs  verify-llama-runtime.mjs
src/: App.tsx  accessibility.test.ts  architecture.test.ts
src-tauri/: Cargo.toml  _msvc_check.bat  _msvc_taureidev.bat  _msvc_test.bat  run-check.ps1  run-dev.ps1  run-test.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: glm-ocr-models.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: ai.rs  assets.rs  banks.rs  document_import.rs  files.rs  health.rs  local_ocr.rs  mod.rs  models.rs  ocr.rs  providers.rs  questions.rs  sessions.rs
src-tauri/src/db/: assets.rs  banks.rs  migrations.rs  mod.rs  model_installations.rs  providers.rs  schema.sql
src-tauri/src/services/: ai.rs  ai_grading.rs  assets.rs  document_import.rs  glm_ocr.rs  mod.rs  ocr_artifacts.rs
src-tauri/src/services/local_inference/: backend.rs  download.rs  llama_server.rs  manager.rs  manifest.rs  mod.rs  process.rs  runtime.rs  session.rs  sources.rs
src-tauri/tests/: local_glm_ocr_compat.rs
src-tauri/tests/fixtures/: question-bank.docx
src-tauri/tests/fixtures/glm-ocr/: manifest.json
src/components/: AppShell.tsx  EmptyState.tsx  MarkdownContent.tsx  PaperComposer.tsx  QuestionNavigator.tsx
src/domain/: ai.ts  grading.test.ts  grading.ts  localModel.ts  ocr.ts  paper.test.ts  paper.ts  question.ts  questionNavigation.test.ts  questionNavigation.ts  scoring.test.ts  scoring.ts  session.test.ts  session.ts
src/features/ai/: api.ts  batchCheckpoint.test.ts  batchCheckpoint.ts  currentModel.test.ts  currentModel.ts  gradingPolicy.test.ts  gradingPolicy.ts  providerPresets.test.ts  providerPresets.ts
src/features/banks/: api.ts  portableBank.test.ts  portableBank.ts
src/features/import/: api.ts  importDraftPersistence.test.ts  importDraftPersistence.ts  (+4 more)
src/import-core/: index.ts
src/lib/: tauri.ts
src/pages/: BanksPage.tsx  DashboardPage.tsx  OcrPage.tsx  PracticePage.tsx  SettingsPage.tsx  TestPage.tsx
src/styles/: index.css
(+48 files in other folders)
